Changed a couple of things to improve the UX.

--- a/src/components/general/General.scss
+++ b/src/components/general/General.scss
@@ -22,7 +22,7 @@
         font-size: 3.5rem;
         font-weight: bold;
         letter-spacing: .2rem;
-        background-image: linear-gradient(to right, $color-red-light, $color-primary-light);
+        background-image: linear-gradient(to right, $color-red-light, $color-red);
         background-clip: text;
         color: transparent;
         transition: all .3s;
