--- a/src/components/protect/Protect.scss
+++ b/src/components/protect/Protect.scss
@@ -30,7 +30,7 @@
         font-family: "Cabin";
         font-size: 2rem;
         letter-spacing: .1rem;
-        color: $color-primary-light;
+        color: $color-red-light;
         text-align: center;
     }
 
